# tap-transifex

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/: renovate.json5
.github/workflows/: build.yaml  build.yml  constraints.txt  requirements.txt  test.yaml  test.yml
tap_transifex/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
