[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-transifex"
description = "Singer tap for Transifex, built with the Meltano SDK for Singer Taps"
readme = "README.md"
keywords = [
  "ELT",
  "singer.io",
  "Transifex",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]

[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"

[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"

[project.scripts]
"tap-transifex" = "tap_transifex.tap:TapTransifex.cli"

[project.urls]
Documentation = "https://github.com/reservoir-data/tap-transifex#readme"
Homepage = "https://github.com/reservoir-data/tap-transifex"
Repository = "https://github.com/reservoir-data/tap-transifex"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=8",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.8",
  "ty>=0.0.1a16",
  "types-requests>=2.31",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.5.19"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [ "tap_transifex" ]
isort.required-imports = [ "from __future__ import annotations" ]
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
pytest = "pytest"
ty = "ty"
types-requests = "requests"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "mypy",
  "pytest",
]

[tool.pyproject-fmt]
table_format = "logn"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.tox]
min_version = "4.43"
requires = [
  "tox>=4.22",
  "tox-gh>=1.5.0",
  "tox-uv>=1.17",
]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]

[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]

[tool.tox.env.sync]
commands = [ [ "tap-transifex", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_transifex", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_transifex", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
pass_env = [ "TAP_TRANSIFEX_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.gh.python]
"3.14" = [ "3.14", "dependencies", "typing" ]
"3.13" = [ "3.13" ]
"3.12" = [ "3.12" ]

[tool.mypy]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
